--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "^1.4",
         "league/oauth2-client": "^2.3",
-        "behat/mink": "^1.7"
+        "behat/mink": "^1.7",
+        "drupal/coder": "^8.2"
     },
     "replace": {
         "drupal/core": "^8.5"
