--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "drupal/coder": "^8.2",
         "drupal/social_auth_google": "~1.0",
         "league/oauth2-facebook": "^2.0",
-        "drupal/social_auth_linkedin": "^2.0"
+        "drupal/social_auth_linkedin": "^2.0",
+        "league/oauth2-instagram": "^2.0"
     },
     "replace": {
         "drupal/core": "^8.5"
