--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/oauth2-facebook": "^2.0",
         "drupal/social_auth_linkedin": "^2.0",
         "league/oauth2-instagram": "^2.0",
-        "drupal/social_auth_twitter": "~2.0"
+        "drupal/social_auth_twitter": "~2.0",
+        "drupal/legal": "1.x-dev"
     },
     "replace": {
         "drupal/core": "^8.5"
