--- a/themes/ljevicbootstrap/ljevicbootstrap.info.yml
+++ b/themes/ljevicbootstrap/ljevicbootstrap.info.yml
@@ -21,6 +21,6 @@ libraries:
  - ljevicbootstrap/fonts
 
 # Add Main Bootstrap CDNs
-#bs-cdn-css: 'https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css'
-#bs-cdn-js: 'https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js'
+bs-cdn-css: 'https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css'
+bs-cdn-js: 'https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js'
 
