The bugs were fixed #2

--- a/themes/ljevicbootstrap/ljevicbootstrap.info.yml
+++ b/themes/ljevicbootstrap/ljevicbootstrap.info.yml
@@ -9,7 +9,8 @@ regions:
   languages: 'Languages'
   navigation: 'Navigation'
   titlepage: 'Title page'
-  banner: 'Banner'
+  banner_left: 'Banner Left'
+  banner_right: 'Banner Right'
   help: 'Help'
   content: 'Main Content'
   sidebar_left_top: 'Sidebar Left Top'  
